# TensorCFPQ

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cuda/: automata_loader.h  context.h  graph_data.h  kernels.h  main.cu  memory.h  misc.h  notes.md  solution.h  tests.h  tests_dev.h  timer.h
data/: colab.txt  lab.txt
data/FullGraph/: automata.txt  fullgraph_100.txt  fullgraph_1000.txt  fullgraph_200.txt  fullgraph_2000.txt  fullgraph_500.txt  fullgraph_5000.txt
data/MemoryAliases/: automata.txt  bzip2.txt  cnf.txt  grammar.txt  gzip.txt  ls.txt  pr.txt  wc.txt
data/RDF/: automata.txt  core.txt  enzyme.txt
data/WorstCase/: automata.txt  worstcase_1024.txt  worstcase_128.txt  worstcase_2048.txt  worstcase_256.txt  worstcase_512.txt  worstcase_64.txt
